# Kvasir_SDK

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  docker_build.sh
.github/workflows/: ci.yml  docker-build.yml
cmake/: arm_clang.cmake  arm_compiler_common.cmake  arm_gcc.cmake  compiler_common.cmake  compiler_common_end.cmake  cppcheck.cmake  jlink.cmake  kvasir.cmake  tidy.cmake  util.cmake
cmake/tools/: beautify_lst.py  find_undefined_refs.py  gen_app_data_for_bootloader.py  ihex_to_uf2.py  linker_utils.py  pretty_size.py  strip_empty_segments.py  two_stage_link.py
linker/: common.ld  common_bss_body.inc.ld  common_data_body.inc.ld  common_data_flash.ld  common_data_ram_only.ld  common_eeprom.ld  common_flash.ld  common_heap.ld  common_heap_body.inc.ld  common_noInitLowRam_body.inc.ld  common_noInit_body.inc.ld  common_ram.ld  common_ram_only.ld  common_sections.ld  common_stack_body.inc.ld  common_stack_heap.ld  common_text_body.inc.ld  common_text_flash.ld  common_text_ram.ld  common_vectors_body.inc.ld
scripts/: Dockerfile  Dockerfile.build-env  Dockerfile.kvasir  README.md  create_container.sh  entrypoint.sh  run_container.sh
src/kvasir/Atomic/: Atomic.hpp  Queue.hpp
src/kvasir/Common/: Core.hpp  Interrupt.hpp  Tags.hpp
src/kvasir/Devices/: BusPowerManager.hpp  I2CDeviceBase.hpp  SharedBusDevice.hpp  utils.hpp
src/kvasir/Io/: Io.hpp  PinFactories.hpp  PortFactories.hpp  Types.hpp  Utility.hpp
src/kvasir/Mpl/: Algorithm.hpp  IntegralConstants.hpp  Types.hpp  Utility.hpp  brigand.hpp
src/kvasir/Register/: Apply.hpp  AtomicFactories.hpp  Exec.hpp  Factories.hpp  IsolatedFactories.hpp  Register.hpp  RegisterFmt.hpp  Seam.hpp  Types.hpp  Utility.hpp
src/kvasir/StartUp/: IsrProfiler.hpp  StartUp.hpp
src/kvasir/Util/: BitField.hpp  FaultHandler.hpp  SaturatingValue.hpp  StackProtector.hpp  StaticFunction.hpp  StaticMap.hpp  ubsan.hpp  (+7 more)
tests/: CMakeLists.txt  kvasir_test.hpp  multi_register_tests.cpp  read_tests.cpp  rmw_tests.cpp  sequence_point_tests.cpp  special_access_tests.cpp  test_registers.hpp  write_tests.cpp
(+5 files in other folders)
